add solution to assessment

--- a/ajg-technical-interview/ClientApp/src/app/components/sanctioned-entities/sanctioned-entities.component.html
+++ b/ajg-technical-interview/ClientApp/src/app/components/sanctioned-entities/sanctioned-entities.component.html
@@ -1,21 +1,31 @@
 <h1 id="tableLabel">Sanctioned Entities</h1>
+<p>
+    <ngb-alert *ngIf="showToast" [type]="alertType" (close)="showToast=false">{{ message }}</ngb-alert>
+</p>
 
 <p *ngIf="!entities"><em>Loading...</em></p>
-
+<div class="button-container text-right pb-3">
+    <button type="button" class="btn btn-light" (click)="open()">Create New Entity</button>
+</div>
 <table class='table table-striped' aria-labelledby="tableLabel" *ngIf="entities">
     <thead>
-    <tr>
-        <th>Name</th>
-        <th>Domicile</th>
-        <th>Status</th>
-    </tr>
+        <tr>
+            <th>Name</th>
+            <th>Domicile</th>
+            <th>Status</th>
+        </tr>
     </thead>
     <tbody>
-    <tr *ngFor="let entity of entities">
-        <td>{{ entity.name }}</td>
-        <td>{{ entity.domicile }}</td>
-        <td *ngIf="entity.accepted" class="text-success">Accepted</td>
-        <td *ngIf="!entity.accepted" class="text-danger">Rejected</td>
-    </tr>
+        <tr *ngFor="let entity of entities">
+            <td>{{ entity.name }}</td>
+            <td>{{ entity.domicile }}</td>
+            <td>
+                <div class="custom-control custom-switch">
+                    <input type="checkbox" [checked]="entity.accepted" disabled class="custom-control-input"
+                        id="customSwitch1">
+                    <label class="custom-control-label" for="customSwitch1"></label>
+                </div>
+            </td>
+        </tr>
     </tbody>
 </table>
