--- a/ajg-technical-interview/ClientApp/src/app/components/jumbotron-counter/jumbotron-counter.component.html
+++ b/ajg-technical-interview/ClientApp/src/app/components/jumbotron-counter/jumbotron-counter.component.html
@@ -1,4 +1,4 @@
 <div class="jumbotron text-center">
     <p>Current count:</p>
-    <p><strong>{{getCounter() | async}}</strong></p>
+    <p><strong>{{getCounterAsync() | async}}</strong></p>
 </div>
