--- a/ajg-technical-interview/ClientApp/src/app/components/jumbotron-counter/jumbotron-counter.component.html
+++ b/ajg-technical-interview/ClientApp/src/app/components/jumbotron-counter/jumbotron-counter.component.html
@@ -1,4 +1,4 @@
 <div class="jumbotron text-center">
     <p>Current count:</p>
-    <p><strong>Please include the counter here</strong></p>
+    <p aria-live="polite">Current count: <strong>{{ currentCount }}</strong></p>
 </div>
