--- a/ajg-technical-interview/ClientApp/src/app/components/sanctioned-entities/sanctioned-entities.component.html
+++ b/ajg-technical-interview/ClientApp/src/app/components/sanctioned-entities/sanctioned-entities.component.html
@@ -1,8 +1,8 @@
 <h1 id="tableLabel">Sanctioned Entities</h1>
 
-<p *ngIf="!entities"><em>Loading...</em></p>
+<p *ngIf="!entities$ | async"><em>Loading...</em></p>
 
-<table class='table table-striped' aria-labelledby="tableLabel" *ngIf="entities">
+<table class='table table-striped' aria-labelledby="tableLabel" *ngIf="entities$ | async">
     <thead>
     <tr>
         <th>Name</th>
@@ -11,7 +11,7 @@
     </tr>
     </thead>
     <tbody>
-    <tr *ngFor="let entity of entities">
+    <tr *ngFor="let entity of entities$ | async">
         <td>{{ entity.name }}</td>
         <td>{{ entity.domicile }}</td>
         <td *ngIf="entity.accepted" class="text-success">Accepted</td>
@@ -19,3 +19,25 @@
     </tr>
     </tbody>
 </table>
+
+<form [formGroup]="sanctionedForm" (ngSubmit)="saveEntity()">
+    <div class="form-group">
+        <label for="name">Name</label>
+        <input type="text" class="form-control" 
+        formControlName="name"
+        placeholder="Enter name"/>
+    </div>
+    <div class="form-group">
+        <label for="domicile">Domicile</label>
+        <input type="text" class="form-control" 
+        formControlName="domicile"
+        placeholder="Enter domicile"/>
+    </div>
+    <div class="form-check form-switch">
+        <input class="form-check-input" type="checkbox" formControlName="status">
+        <label class="form-check-label" for="status">{{sanctionedForm.controls['status'].value ? 'Status: Accepted' : 'Status: Rejected'}}</label>
+    </div>
+    <div class="text-center">
+        <button type="submit" [disabled]="!sanctionedForm.valid" class="btn btn-primary">Create Entity</button>
+    </div>
+</form>
