Copy all components codes from ClientApp
Copy all components code from ClientApp to ClientAppV2

--- a/ajg-technical-interview/ClientAppV2/src/app/components/jumbotron-counter/jumbotron-counter.component.html
+++ b/ajg-technical-interview/ClientAppV2/src/app/components/jumbotron-counter/jumbotron-counter.component.html
@@ -1,1 +1,4 @@
-<p>jumbotron-counter works!</p>
+<div class="jumbotron text-center">
+  <p>Current count:</p>
+  <p><strong>Please include the counter here</strong></p>
+</div>
