--- a/ajg-technical-interview/ClientAppV2/src/app/components/jumbotron-counter/jumbotron-counter.component.html
+++ b/ajg-technical-interview/ClientAppV2/src/app/components/jumbotron-counter/jumbotron-counter.component.html
@@ -1,4 +1,5 @@
 <div class="jumbotron text-center">
   <p>Current count:</p>
   <p><strong>Please include the counter here</strong></p>
+  <p><strong>{{count}}</strong></p>
 </div>
