--- a/ajg-technical-interview/ClientAppV2/src/app/components/nav-menu/nav-menu.component.html
+++ b/ajg-technical-interview/ClientAppV2/src/app/components/nav-menu/nav-menu.component.html
@@ -33,6 +33,9 @@
           <li class="nav-item" [routerLinkActive]="['link-active']">
             <a class="nav-link text-dark" [routerLink]="['/sanctioned-entities']">Sanctioned Entities</a>
           </li>
+          <li class="nav-item" [routerLinkActive]="['link-active']">
+            <a class="nav-link text-dark" [routerLink]="['/add-sanctioned-entity']">Sanctioned Entities</a>
+          </li>
         </ul>
       </div>
     </div>
