Bootstrap and status switch stylesheet added correctly.
Bootstrap and stylesheet added correctly.

--- a/ajg-technical-interview/ClientAppV2/src/app/components/nav-menu/nav-menu.component.html
+++ b/ajg-technical-interview/ClientAppV2/src/app/components/nav-menu/nav-menu.component.html
@@ -34,7 +34,7 @@
             <a class="nav-link text-dark" [routerLink]="['/sanctioned-entities']">Sanctioned Entities</a>
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/add-sanctioned-entity']">Sanctioned Entities</a>
+            <a class="nav-link text-dark" [routerLink]="['/add-sanctioned-entity']">Add New Sanctioned Entity</a>
           </li>
         </ul>
       </div>
