--- a/ajg-technical-interview/ClientAppV2/src/app/components/add-sanctioned-entity/add-sanctioned-entity.component.html
+++ b/ajg-technical-interview/ClientAppV2/src/app/components/add-sanctioned-entity/add-sanctioned-entity.component.html
@@ -1,24 +1,31 @@
-<form [formGroup]="entityForm" (ngSubmit)="onSubmit()">
+<form>
   <div class="form-group">
-    <label for="name">Name:</label>
-    <input type="text" id="name" formControlName="name" class="form-control" />
-    <div *ngIf="entityForm.get('name').hasError('required') && entityForm.get('name').touched">
-      Name is required.
-    </div>
+    <label for="name">Name</label>
+    <input
+      type="text"
+      class="form-control"
+      id="name"
+      placeholder="Enter name"
+      formControlName="name"
+    />
   </div>
-
   <div class="form-group">
-    <label for="domicile">Domicile:</label>
-    <input type="text" id="domicile" formControlName="domicile" class="form-control" />
-    <div *ngIf="entityForm.get('domicile').hasError('required') && entityForm.get('domicile').touched">
-      Domicile is required.
-    </div>
+    <label for="domicile">domicile</label>
+    <input
+      type="text"
+      class="form-control"
+      id="domicle"
+      placeholder="Enter domicile"
+      formControlName="domicile"
+    />
   </div>
+  <div class="form-check form-switch">
+      <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+      <label class="form-check-label" for="flexSwitchCheckDefault">Status</label>
+ </div>
 
-  <div class="form-group">
-    <label>Status:</label>
-    <input type="checkbox" formControlName="isSanctioned" class="form-control-switch" />
-  </div>
 
-  <button type="submit" class="btn btn-primary">Add Entity</button>
+  <button type="submit" class="btn btn-primary">Add Entry</button>
+
+
 </form>
