--- a/ajg-technical-interview/ClientAppV2/src/app/components/add-sanctioned-entity/add-sanctioned-entity.component.html
+++ b/ajg-technical-interview/ClientAppV2/src/app/components/add-sanctioned-entity/add-sanctioned-entity.component.html
@@ -1,4 +1,4 @@
-<form>
+<form [formGroup]="entityForm" (ngSubmit)="onSubmit()">
   <div class="form-group">
     <label for="name">Name</label>
     <input
@@ -19,9 +19,10 @@
       formControlName="domicile"
     />
   </div>
-  <div class="form-check form-switch">
-      <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
-      <label class="form-check-label" for="flexSwitchCheckDefault">Status</label>
+
+  <div class="form-group form-check form-switch">
+      <input class="form-check-input" type="checkbox" role="switch" id="status" formControlName="isSanctioned">
+      <label class="form-check-label" for="status">Status</label>
  </div>
 
 
