FE Changes to add new Sanctioned entity, ngrx to store the counter and tests.

--- a/ajg-technical-interview/ClientApp/src/app/components/counter/counter.component.html
+++ b/ajg-technical-interview/ClientApp/src/app/components/counter/counter.component.html
@@ -2,6 +2,6 @@
 
 <p>This is a simple example of an Angular component.</p>
 
-<p aria-live="polite">Current count: <strong>{{ currentCount }}</strong></p>
+<app-display-counter></app-display-counter>
 
 <button class="btn btn-primary" (click)="incrementCounter()">Increment</button>
