--- a/ajg-technical-interview/ClientApp/src/app/components/jumbotron-counter/jumbotron-counter.component.html
+++ b/ajg-technical-interview/ClientApp/src/app/components/jumbotron-counter/jumbotron-counter.component.html
@@ -1,4 +1,3 @@
 <div class="jumbotron text-center">
-    <p>Current count:</p>
-    <p><strong>Please include the counter here</strong></p>
+  <app-display-counter></app-display-counter>
 </div>
