Added Subscription to avoid memory leaks from subscribers and fixed entity status bug after library update.

--- a/ajg-technical-interview/ClientApp/src/app/components/sanctioned-entities/add-edit-sanctioned-entities/add-edit-sanctioned-entities.component.html
+++ b/ajg-technical-interview/ClientApp/src/app/components/sanctioned-entities/add-edit-sanctioned-entities/add-edit-sanctioned-entities.component.html
@@ -69,9 +69,9 @@
     />
     <label
       class="form-label"
-      [ngClass]="status ? 'accepted' : 'rejected'"
+      [ngClass]="status.value ? 'accepted' : 'rejected'"
       for="flexSwitchCheckDefault"
-      >{{ status | status }}</label
+      >{{ status.value | status }}</label
     >
   </div>
   <div class="col-md-5">
